--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "@vueuse/components": "^9.1.1",
     "@vueuse/core": "^9.1.1",
     "pinia": "^2.0.17",
